fix chat window not responsive in height -was set to a fixed 325px

--- a/web/css/app/lily.css
+++ b/web/css/app/lily.css
@@ -331,7 +331,8 @@ a{
 	clear: both;
 	width: 100%;
 	position: relative;
-	height: 325px;
+	height: 325px; /* fallback for navigators who don't support the calc function */
+	height: calc(100% - 135px);
 }
 
 .lily-avatar-wrapper{
